force-app/main/default/objects/New_Tool_Request__c/New_Tool_Request__c.object-meta.xml
<CustomObject>
    <label>New Tool Request</label>
    <nameField>
        <label>New Tool Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Tool Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>