force-app/main/default/objects/New_Tool_Request__c/fields/Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason__c</fullName>
    <label>Decision Reason</label>
    <type>TextArea</type>
</CustomField>