force-app/main/default/objects/New_Tool_Request__c/fields/Link_to_Tool_Online__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Tool_Online__c</fullName>
    <label>Link to Tool Online</label>
    <type>Url</type>
</CustomField>