force-app/main/default/objects/New_Tool_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Request Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tool_Request_Status</valueSetName>
    </valueSet>
</CustomField>