force-app/main/default/objects/New_Tool_Request__c/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tool</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>New Tool Requests</relationshipLabel>
    <relationshipName>New_Tool_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>