force-app/main/default/objects/New_Tool_Request__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>Tool__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Retail_Price__c</columns>
    <columns>Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved</label>
</ListView>