force-app/main/default/objects/New_Tool_Request__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Link_to_Tool_Online__c</columns>
    <columns>Retail_Price__c</columns>
    <columns>Short_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Pending</label>
</ListView>